--- a/config/zones/US-CENT-SWPP.yaml
+++ b/config/zones/US-CENT-SWPP.yaml
@@ -691,8 +691,8 @@ emissionFactors:
       value: 454.76337244396854
     biomass:
     - datetime: '2020-01-01'
-      source: BEIS 2021
-      value: 0.0
+      source: eGrid 2020
+      value: 0
     - datetime: '2021-01-01'
       source: BEIS 2021
       value: 0.0
@@ -705,7 +705,7 @@ emissionFactors:
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 1014.6252748901705
+      value: 1014.625275
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1001.8898548190425
@@ -718,7 +718,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 459.1389525209879
+      value: 459.1389525
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 459.677150611773
@@ -741,10 +741,6 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023
       value: 28.739435464835893
-    - _comment: Mean of all US zones
-      datetime: '2020-01-01'
-      source: eGrid 2020
-      value: 70.87985131255388
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -770,7 +766,7 @@ emissionFactors:
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 975.0111176473947
+      value: 975.0111176
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1315.8465789346942
@@ -813,10 +809,9 @@ emissionFactors:
       source: Electricity Maps, 2024 average
       value: 427.57
     biomass:
-    - _comment: Mean of all US zones
-      datetime: '2020-01-01'
+    - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 281.38853074481284
+      value: 66.69147532
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -831,8 +826,9 @@ emissionFactors:
       value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
-      source: eGrid 2020; IPCC 2014
-      value: 1074.6252748901707
+      source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
+        of coal power generation."
+      value: 1044.656633
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1061.8898548190425
@@ -845,7 +841,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 579.1389525209879
+      value: 579.1389525
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 579.677150611773
@@ -868,10 +864,6 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023; IPCC 2014
       value: 66.73943546483589
-    - _comment: Mean of all US zones
-      datetime: '2020-01-01'
-      source: eGrid 2020; IPCC 2014
-      value: 108.87985131255388
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -906,7 +898,7 @@ emissionFactors:
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 1219.0111176473947
+      value: 1219.0111176
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1559.8465789346942
