--- a/config/zones/US-MIDW-MISO.yaml
+++ b/config/zones/US-MIDW-MISO.yaml
@@ -1252,7 +1252,7 @@ emissionFactors:
       value: 501.3722920933296
     biomass:
     - datetime: '2020-01-01'
-      source: BEIS 2021
+      source: eGrid 2020
       value: 0.0
     - datetime: '2021-01-01'
       source: BEIS 2021
@@ -1266,7 +1266,7 @@ emissionFactors:
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 1013.9475550949504
+      value: 1013.675084
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1003.7029994907185
@@ -1279,7 +1279,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 409.30430271803226
+      value: 409.253592
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 409.4254165197668
@@ -1302,10 +1302,6 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023
       value: 28.739435464835893
-    - _comment: Mean of all US zones
-      datetime: '2020-01-01'
-      source: eGrid 2020
-      value: 70.87985131255388
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -1331,7 +1327,7 @@ emissionFactors:
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 922.7890877685242
+      value: 922.7890878
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 613.5782157150479
@@ -1374,10 +1370,9 @@ emissionFactors:
       source: Electricity Maps, 2024 average
       value: 485.44
     biomass:
-    - _comment: Mean of all US zones
-      datetime: '2020-01-01'
+    - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 281.38853074481284
+      value: 139.1151962
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -1392,8 +1387,9 @@ emissionFactors:
       value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
-      source: eGrid 2020; IPCC 2014
-      value: 1073.9475550949505
+      source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
+        of coal power generation."
+      value: 1076.354463
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1063.7029994907184
@@ -1406,7 +1402,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 529.3043027180322
+      value: 529.253592
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 529.4254165197668
@@ -1429,10 +1425,6 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023; IPCC 2014
       value: 66.73943546483589
-    - _comment: Mean of all US zones
-      datetime: '2020-01-01'
-      source: eGrid 2020; IPCC 2014
-      value: 108.87985131255388
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -1467,7 +1459,7 @@ emissionFactors:
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 1166.789087768524
+      value: 1166.7890877999998
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 857.5782157150479
