--- a/config/zones/US-NW-BPAT.yaml
+++ b/config/zones/US-NW-BPAT.yaml
@@ -218,7 +218,7 @@ emissionFactors:
       value: 64.16281498516693
     biomass:
     - datetime: '2020-01-01'
-      source: BEIS 2021
+      source: eGrid 2020
       value: 0.0
     - datetime: '2021-01-01'
       source: BEIS 2021
@@ -232,7 +232,7 @@ emissionFactors:
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 1134.8989239933912
+      value: 1134.898924
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1118.4367385399487
@@ -245,7 +245,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 394.4247593706675
+      value: 394.4247594
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 385.50001712095116
@@ -306,10 +306,6 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023
       value: 692.2365799135232
-    - _comment: Mean of all US zones
-      datetime: '2020-01-01'
-      source: eGrid 2020
-      value: 803.8986689024886
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -340,10 +336,9 @@ emissionFactors:
       source: Electricity Maps, 2023 average
       value: 122.8
     biomass:
-    - _comment: Mean of all US zones
-      datetime: '2020-01-01'
+    - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 281.38853074481284
+      value: 85.91723542
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -359,7 +354,7 @@ emissionFactors:
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 1194.8989239933912
+      value: 1194.898924
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1178.4367385399487
@@ -372,7 +367,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 514.4247593706675
+      value: 514.4247594000001
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 505.50001712095116
@@ -442,10 +437,6 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023; IPCC 2014
       value: 936.2365799135232
-    - _comment: Mean of all US zones
-      datetime: '2020-01-01'
-      source: eGrid 2020; IPCC 2014
-      value: 1047.8986689024887
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
