--- a/config/zones/US-TEX-ERCO.yaml
+++ b/config/zones/US-TEX-ERCO.yaml
@@ -865,8 +865,8 @@ emissionFactors:
       value: 366.1763011584388
     biomass:
     - datetime: '2020-01-01'
-      source: BEIS 2021
-      value: 0.0
+      source: eGrid 2020
+      value: 0
     - datetime: '2021-01-01'
       source: BEIS 2021
       value: 0.0
@@ -879,7 +879,7 @@ emissionFactors:
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 1043.4008891244728
+      value: 1043.400889
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1032.0234558048815
@@ -892,7 +892,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 393.10006596259814
+      value: 393.100066
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 392.2742477255014
@@ -915,10 +915,6 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023
       value: 28.739435464835893
-    - _comment: Mean of all US zones
-      datetime: '2020-01-01'
-      source: eGrid 2020
-      value: 70.87985131255388
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -944,7 +940,7 @@ emissionFactors:
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 1070.8111086067734
+      value: 1070.811109
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1068.7253320833786
@@ -984,10 +980,9 @@ emissionFactors:
       source: Electricity Maps, 2023 average
       value: 388.77
     biomass:
-    - _comment: Mean of all US zones
-      datetime: '2020-01-01'
+    - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 281.38853074481284
+      value: 0.4539605655
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -1002,8 +997,9 @@ emissionFactors:
       value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
-      source: eGrid 2020; IPCC 2014
-      value: 1103.4008891244728
+      source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
+        of coal power generation."
+      value: 1081.455715
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1092.0234558048815
@@ -1016,7 +1012,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 513.1000659625981
+      value: 513.100066
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 512.2742477255015
@@ -1039,10 +1035,6 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023; IPCC 2014
       value: 66.73943546483589
-    - _comment: Mean of all US zones
-      datetime: '2020-01-01'
-      source: eGrid 2020; IPCC 2014
-      value: 108.87985131255388
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -1074,7 +1066,7 @@ emissionFactors:
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 1314.8111086067734
+      value: 1314.811109
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1312.7253320833786
